Fix overflow-x in code blocks

--- a/assets/themes/twitter-2.0/css/pygments.css
+++ b/assets/themes/twitter-2.0/css/pygments.css
@@ -1,10 +1,4 @@
 
-.highlight pre {
-    white-space:pre;
-    word-wrap:normal;
-    overflow-x: visible;
-}
-
 .highlight { }
 .highlight .c { color: #586E75 } /* Comment */
 .highlight .err { color: #93A1A1 } /* Error */
